[package]
name = "model"
version = "0.1.0"
edition = "2021"
authors = ["paydii <hej@setoelkahfi.se>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1" }
strum = "0.27"
# Local crates
smbcloud-model = "0.3.19"
#smbcloud-model = { path = "./../../../../crates/smbcloud-model"}